Fixed the overflow CSS properties for the chart and map being the wrong type.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -320,7 +320,8 @@ div.heat-js {
 
 div.heat-js {
     div.map-contents {
-        overflow-y: scroll;
+        overflow-x: scroll;
+        overflow-y: hidden;
 
         div.map {
             display: inline-flex;
@@ -436,7 +437,8 @@ div.heat-js {
 div.heat-js {
     div.chart-contents {
         display: flex;
-        overflow-y: scroll;
+        overflow-x: scroll;
+        overflow-y: hidden;
         text-wrap: nowrap;
         white-space: nowrap;
 
